# axiom-os

./: .gitignore  Makefile  README.md  build.sh  deploy_cloud.sh  deploy_prod.sh
axiom-ccp/: dev.sh
axiom-ccp/axiom-ccp-backend/: Cargo.toml  db_setup.sql
axiom-ccp/axiom-ccp-backend/migrations/: 20260225000000_create_registry_tables.sql  20260225000001_add_metadata_to_tomains.sql  20260225000002_rename_to_team_name.sql  20260225000003_create_bindings_table.sql
axiom-ccp/axiom-ccp-backend/src/: main.rs
axiom-ccp/axiom-ccp-backend/src/handlers/: bindings.rs  docs.rs  mod.rs  registry.rs  tomain.rs
axiom-ccp/axiom-ccp-frontend/: index.html  package-lock.json  package.json
axiom-ccp/axiom-ccp-frontend/src/: App.tsx  Dashboard.tsx  index.css
axiom-ccp/axiom-ccp-frontend/src/api/: tomainClient.ts
axiom-ccp/axiom-ccp-frontend/src/components/: BindingPanel.tsx  ContextSwitcher.tsx  CreateAppModal.tsx  DeleteServiceModal.tsx  FabricLog.tsx  FeatureDetails.tsx  FeatureStatusTable.tsx  PackageDetails.tsx  ServerGrid.tsx  Sidebar.tsx  TomainMap.tsx
axiom-cli/: Cargo.toml
axiom-cli/src/: main.rs  swagger.rs
axiom-homepage/axiom-macros/src/: lib.rs
axiom-sdk/: Cargo.toml
axiom-sdk/axiom-macros/: Cargo.toml
axiom-sdk/axiom-macros/src/: lib.rs
axiom-sdk/src/: lib.rs
axiom-shell/: Cargo.toml
axiom-shell/src/: adapters.rs  bridge.rs  db.rs  egress.rs  main.rs  resilience.rs  runtime.rs  session.rs  supervisor.rs
docs/ec2-services/: axiom-ccp-backend.service  axiom-shell.service
intro-axiom/: index.axiom.html  index.html
(+1 files in other folders)
