[package]
name = "ax"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.31", features = ["derive"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
reqwest = { version = "0.12.12", features = ["json"] }
tokio = { version = "1.43.0", features = ["full"] }
chrono = { version = "0.4.40", features = ["serde"] }
colored = "3.0.0"
anyhow = "1.0.96"
base64 = "0.22.1"
dirs = "6.0.0"
toml = "0.8.19"
