[package]
name = "axiom-shell"
version = "0.1.0"
edition = "2024"

[dependencies]
wasmtime = "29.0.0"
wasmtime-wasi = "29.0.0"
tokio = { version = "1.43.0", features = ["full"] }
axum = "0.8.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-webpki-roots", "http2"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.10", features = ["v4"] }
notify = "8.0.0"
dashmap = "6.1"
async-trait = "0.1"
url = "2.5"
dirs = "5.0.1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "macros", "json"] }
opentelemetry = "0.27"
tracing-opentelemetry = "0.28"
jsonwebtoken = "9.3"
futures = "0.3"
